--- a/skills.html
+++ b/skills.html
@@ -8,11 +8,12 @@
 
     <meta name="author" content="Vincent L. Grimaldo">
     <meta name="description" content="Are you looking for some new and affordable website that will represent your organization, business or your personal hobbies? Let me help you!">
-    <meta name="keywords" content="Vincent, Grimaldo, Vincent Grimaldo, skills, HTML, CSS, Website, Design">
+    <meta name="keywords" content="vlg, vincent, grimaldo, skills, html, css, website, design">
 
     <link rel="stylesheet" href="assets/css/aos.css">
-    <link rel="stylesheet" href="assets/css/all.min.css">
     <link rel="stylesheet" href="assets/css/main.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
 </head>
 <body>
     <header>
