--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="author" content="Vincent L. Grimaldo">
     <meta name="description" content="Are you looking for some new and affordable website that will represent your organization, business or your personal hobbies? Let me help you!">
-    <meta name="keywords" content="vlg, vincent, grimaldo, html, css, website, design">
+    <meta name="keywords" content="vlgrimaldo, vlg, vincent, grimaldo, html, css, website, design">
 
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/main.min.css">
