--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="project2" data-aos-duration="400" data-aos="zoom-in-up">
                     <div></div>
-                    <h3><a href="">AcadServicing</a></h3>
+                    <h3><a href="https://vincentg21.github.io/AcadServicing/">AcadServicing</a></h3>
                     <p>
                         Studying in this era is totally hard. Online class, self study and worst slow connection of internet. That is why we are giving you this opportunity to lessen your school work by the help of AcadServicing.
                     </p>
