--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
             <section class="projects-content">
                 <div class="project1" data-aos-duration="400" data-aos="zoom-in-up">
                     <div></div>
-                    <h3><a href="">Earthselfie</a></h3>
+                    <h3><a href="https://vincentg21.github.io/earthselfie/">Earthselfie</a></h3>
                     <p>
                         This is a picture gallery page that will show to everyone some of the good places, animals, plants and more! The intention of this site is to inspire the viewers to love and care more for the mother nature.
                     </p>
