--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="project3" data-aos-duration="400" data-aos="zoom-in-up">
                     <div></div>
-                    <h3><a href="">Quotations</a></h3>
+                    <h3><a href="https://vincentg21.github.io/quotations/">Quotations</a></h3>
                     <p>
                         Having some inspirational words in our everyday life will make changes in the mood, mentality and in some way someone's point of view in every specific aspects. This page will give the viewers some quotes about art, education, passion, happiness and life.
                     </p>
