--- a/projects.html
+++ b/projects.html
@@ -62,9 +62,9 @@
                 </div>
                 <div class="project4" data-aos-duration="400" data-aos="zoom-in-up">
                     <div></div>
-                    <h3><a href="">Fooddy Blog</a></h3>
+                    <h3><a href="https://vincentg21.github.io/Fooddy-Blog/">Fooddy Blog</a></h3>
                     <p>
-                        Everyone loves food especially we Filipinos. That is why Fooddy Blog will help us for some of the recipe in different Filipino dishes. This page will present a picture of specific dishes with the ingredients and procedures on how to make it done.
+                        Everyone loves food especially we Filipinos. That is why Fooddy Blog will help us for some of the recipe in different Filipino dishes. This page will present a picture of specific dishes with the ingredients and procedures on how to make it done. (Work in progress...)
                     </p>
                 </div>
                 <div class="project5" data-aos-duration="400" data-aos="zoom-in-up">
