--- a/projects.html
+++ b/projects.html
@@ -41,28 +41,28 @@
             <section class="projects-content">
                 <div class="project1" data-aos-duration="400" data-aos="zoom-in-up">
                     <div></div>
-                    <h3><a href="https://vincentg21.github.io/earthselfie/">Earthselfie</a></h3>
+                    <h3><a href="https://vlgrimaldo.github.io/earthselfie/">Earthselfie</a></h3>
                     <p>
                         This is a picture gallery page that will show to everyone some of the good places, animals, plants and more! The intention of this site is to inspire the viewers to love and care more for the mother nature.
                     </p>
                 </div>
                 <div class="project2" data-aos-duration="400" data-aos="zoom-in-up">
                     <div></div>
-                    <h3><a href="https://vincentg21.github.io/AcadServicing/">AcadServicing</a></h3>
+                    <h3><a href="https://vlgrimaldo.github.io/AcadServicing/">AcadServicing</a></h3>
                     <p>
                         Studying in this era is totally hard. Online class, self study and worst slow connection of internet. That is why we are giving you this opportunity to lessen your school work by the help of AcadServicing.
                     </p>
                 </div>
                 <div class="project3" data-aos-duration="400" data-aos="zoom-in-up">
                     <div></div>
-                    <h3><a href="https://vincentg21.github.io/quotations/">Quotations</a></h3>
+                    <h3><a href="https://vlgrimaldo.github.io/quotations/">Quotations</a></h3>
                     <p>
                         Having some inspirational words in our everyday life will make changes in the mood, mentality and in some way someone's point of view in every specific aspects. This page will give the viewers some quotes about art, education, passion, happiness and life.
                     </p>
                 </div>
                 <div class="project4" data-aos-duration="400" data-aos="zoom-in-up">
                     <div></div>
-                    <h3><a href="https://vincentg21.github.io/Fooddy-Blog/">Fooddy Blog</a></h3>
+                    <h3><a href="https://vlgrimaldo.github.io/Fooddy-Blog/">Fooddy Blog</a></h3>
                     <p>
                         Everyone loves food especially we Filipinos. That is why Fooddy Blog will help us for some of the recipe in different Filipino dishes. This page will present a picture of specific dishes with the ingredients and procedures on how to make it done. (Work in progress...)
                     </p>
